fixed fade animation overflow
git-svn-id: https://plugins.svn.wordpress.org/recent-posts-flexslider/trunk@1067392 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/slider.css
+++ b/css/slider.css
@@ -43,7 +43,7 @@ html[xmlns] .slides {display: block;}
 .flexslider {margin: 0 0 60px; position: relative; zoom: 1;}
 .flex-viewport {max-height: 2000px; -webkit-transition: all 1s ease; -moz-transition: all 1s ease; -o-transition: all 1s ease; transition: all 1s ease;}
 .loading .flex-viewport {max-height: 300px;}
-.flexslider .slides {zoom: 1; margin: 0;}
+.flexslider .slides {zoom: 1; margin: 0; overflow: hidden;}
 .carousel li {margin-right: 5px;}
 
 /* Direction Nav */
